--- a/projeto 1 - curso web/projeto.html
+++ b/projeto 1 - curso web/projeto.html
@@ -20,11 +20,17 @@
 
         <hr> <!--Do inglês horizontal rule, posso fazer uma linha horizontal assim-->>
 
+        <h2>Tags</h2>
+
         Este é um texto <b>negrito</b> usando a tag b<br>
         Este é um texto <strong>negrito</strong> usando a tag strong<br><br>
 
         Este é um texto em <i>itálico</i> usando a tag i<br>
-        Este é um texto em <em>itálico</em> usando a tag em - do inglês <em>enphasys</em>
+        Este é um texto em <em>itálico</em> usando a tag em - do inglês <em>enphasys</em><br>
+
+        Este é um texto com <u>sublinhado</u><br>
+
+        Este é um texto <strike>tachado</strike> - quando está errado, por exemplo.<br>
     </body>
 
 </html>
