aprendendo sobre listas não ordenadas e ordenadas, criação de um rodapé bem humorado

--- a/projeto 1 - curso web/projeto.html
+++ b/projeto 1 - curso web/projeto.html
@@ -31,6 +31,41 @@
         Este é um texto com <u>sublinhado</u><br>
 
         Este é um texto <strike>tachado</strike> - quando está errado, por exemplo.<br>
+
+        <hr>
+
+        <h2>Listas</h2>
+
+        <h3>Listas não ordenadas (Não numeradas)</h3>
+
+        <ul type="disc"> <!--Atributo type sãoostipos de marcadores: circle, square ou disc-->
+        	<li>Primeiro ítem</li>
+        	<li>Segundo ítem</li>
+        	<li>Mis um ítem</li>
+        	<li>Um outro ítem</li>
+        	<li>Só mais um ítem...</li>
+        </ul> <!--ul, do inglês, unordered list,lista não ordenada-->
+
+        <h3>Lista ordenada (numerada)</h3>
+
+        <ol type="I"> <!--Atributo type sãoostipos de marcadores: 
+        			1 - numérico, A - ALFABETO MAIÚSCULO,
+        			a - alfabeto minúsculo, I - algarismos romanos maiúsculos
+        			i - algarismosromanos minúsculos-->
+        	<li>Primeiro ítem</li>
+        	<li>Segundo ítem</li>
+        	<li>Mis um ítem</li>
+        	<li>Um outro ítem</li>
+        	<li>Só mais um ítem...</li>
+        </ol> <!--ol, do inglês,ordered list, lista ordenada-->
+
+        <hr>
+
+        <hr>
+
+        <p>Este é só o rodapé da página, onde estão todas aquelas letras miúdas, os contatos, <br>
+        os endereços, os formulários para mensagem, etc, etc, etc. </p>
+
     </body>
 
 </html>
