página html puro de uma empresa fictícia

--- a/projeto 1 - curso web/projeto.html
+++ b/projeto 1 - curso web/projeto.html
@@ -14,11 +14,20 @@
 
     <body>
         <h1>Título do cabeçalho</h1> <!--existe da tag h1 até h6-->
+        <h2>Título menor que o anterior</h2>
+        <h3>Título menor que o anterior</h3>
+        <h4>Título menor que o anterior</h4>
+        <h5>Título menor que o anterior</h5>
+        <h6>Puf!...</h6>
+
+        <hr>
+
+        <h1>Parágrafo</h1>
 
         <p>Este é um parágrafo<br> <!--Posso passar para a próxima linha com <br -->
         de duas linhas!</p>
 
-        <hr> <!--Do inglês horizontal rule, posso fazer uma linha horizontal assim-->>
+        <hr> <!--Do inglês horizontal rule, posso fazer uma linha horizontal assim-->
 
         <h2>Tags</h2>
 
