--- a/projeto 1 - curso web/aula15.html
+++ b/projeto 1 - curso web/aula15.html
@@ -5,7 +5,7 @@ há muitos anos no mercado</p>
 
 <hr>
 
-<h1>Vantagens de ser cliente</h1>
+<h2>Vantagens de ser cliente</h2>
 
 <ol type="1">
 	<li>Lançamentos</li>
@@ -16,15 +16,15 @@ há muitos anos no mercado</p>
 
 <hr>
 
-<h1>O que os clientes estão dizendo:</h1>
+<h2>O que os clientes estão dizendo:</h2>
 
 <p><em>"Fui muito bem atendido e os meus produtos chegaram logo"</em></p>
 
-<h3>José da Silva</h3>
+<strong>José da Silva</strong>
 
 <hr>
 
-<h1>Mapa do site</h1>
+<h2>Mapa do site</h2>
 
 <ul type="disc">
 	<li>Home</li>
