--- a/primeiro projeto/aula15.html
+++ b/primeiro projeto/aula15.html
@@ -1,3 +1,10 @@
+<!doctype html>
+
+<head>
+	<title>Pagina da Empresa</title>
+	<meta charset="utf-8">
+</head>
+
 <h1>A empresa</h1>
 
 <p>Somos uma empresa do ramo alimentício <br>
