--- a/primeiro projeto/projeto.html
+++ b/primeiro projeto/projeto.html
@@ -13,6 +13,12 @@
     </head>
 
     <body>
+        <a href="index.html">Início</a>
+        |
+        <a href="">Guia</a>
+        |
+        <a href="contato.html">Contato</a>
+
         <h1>Título do cabeçalho</h1> <!--existe da tag h1 até h6-->
         <h2>Título menor que o anterior</h2>
         <h3>Título menor que o anterior</h3>
