aula 18 - adição de comentários

--- a/primeiro projeto/aula18.html
+++ b/primeiro projeto/aula18.html
@@ -15,8 +15,8 @@
 		<th>Linguagem</th> <!--table head-->
 		<th>Nível</th>
 
-		<tr>
-			<td>C</td>
+		<tr><!--table row (linha)-->
+			<td>C</td><!--célula da linha-->
 			<td>Intermediário</td>
 		</tr>
 		<tr>
