Adição de imagens à tabela da aula 18

--- a/primeiro projeto/aula18.html
+++ b/primeiro projeto/aula18.html
@@ -11,28 +11,30 @@
 	<p><strong>Nome:</strong> Felipe Lucio do Nascimento</p>
 	<p><strong>Formação:</strong> Ciência da Computação - UFC</p>
 
-	<table border="1">
-		<th>Linguagem</th> <!--table head-->
+	<table 
+	border="1"
+	width="50%"><!--poderia ser também width="200", em píxels-->
+		<th>Linguagem</th> <!--table head (o que é cada coluna)-->
 		<th>Nível</th>
 
 		<tr><!--table row (linha)-->
-			<td>C</td><!--célula da linha-->
+			<td><img src="tag imagem/imagens/c.png" width="60"></td><!--cada informação (célula) da linha-->
 			<td>Intermediário</td>
 		</tr>
 		<tr>
-			<td>C++</td>
+			<td><img src="tag imagem/imagens/cpp.png" width="60">/td>
 			<td>Intermediário</td>
 		</tr>
 		<tr>
-			<td>Java</td>
+			<td><img src="tag imagem/imagens/java.jpg" width="60"></td>
 			<td>Intermediário</td>
 		</tr>
 		<tr>
-			<td>Python</td>
+			<td><img src="tag imagem/imagens/python.jpg" width="60"></td>
 			<td>Intermediário</td>
 		</tr>
 		<tr>
-			<td>Javascript</td>
+			<td><img src="tag imagem/imagens/javascript.png" width="60"></td>
 			<td>Básico</td>
 		</tr>
 	</table>
