aula18.html - links na tabela; uso de rowspan e colspan

--- a/primeiro projeto/aula18.html
+++ b/primeiro projeto/aula18.html
@@ -37,5 +37,16 @@
 			<td><img src="tag imagem/imagens/javascript.png" width="60"></td>
 			<td>Básico</td>
 		</tr>
+		<tr>
+			<td
+			rowspan="2"><strong>Perfis profissionais</strong></td>
+			<td><a href="https://www.github.com/felipeLucio1">Github</a></td> <!--rowspan, do inglês extensão da linha: a célula ocupa 2 linhas-->
+		</tr>
+		<tr>
+			<td><a href="https://www.linkedin.com/in/felipelucionsc">Linkedin</a></td>
+		</tr>
+		<tr>
+			<td colspan="2">Obrigado!!!</td> <!--colspan, do inglês extensão da coluna: a célula ocupa 2 colunas-->
+		</tr>
 	</table>
 </body>
