Inclusão estado Rio Grande do Norte

--- a/primeiro projeto/aula20.html
+++ b/primeiro projeto/aula20.html
@@ -61,6 +61,7 @@
 			<option>Sergipe</option>
 			<option>Piauí</option>
 			<option>Alagoas</option>
+			<option>Rio Grande do Norte</option>
 		</select><br><br>
 
 		<input 
