projeto guia rapido - uso de html entities

--- a/primeiro projeto/projeto guia rapido html/projeto.html
+++ b/primeiro projeto/projeto guia rapido html/projeto.html
@@ -38,10 +38,10 @@
         <h2>Tags</h2>
 
         Este é um texto <b>negrito</b> usando a tag b<br>
-        Este é um texto <strong>negrito</strong> usando a tag strong<br><br>
+        Este é um texto <strong>negrito</strong> usando a tag &lt;strong&gt;<br><br>
 
-        Este é um texto em <i>itálico</i> usando a tag i<br>
-        Este é um texto em <em>itálico</em> usando a tag em - do inglês <em>enphasys</em><br>
+        Este é um texto em <i>itálico</i> usando a tag &lt;i&gt;<br>
+        Este é um texto em <em>itálico</em> usando a tag &lt;em&gt; - do inglês <em>enphasys</em><br>
 
         Este é um texto com <u>sublinhado</u><br>
 
