projeto guia rapido - uso de html entities: correção

--- a/primeiro projeto/projeto guia rapido html/projeto.html
+++ b/primeiro projeto/projeto guia rapido html/projeto.html
@@ -37,7 +37,7 @@
 
         <h2>Tags</h2>
 
-        Este é um texto <b>negrito</b> usando a tag b<br>
+        Este é um texto <b>negrito</b> usando a tag &lt;b&gt;<br>
         Este é um texto <strong>negrito</strong> usando a tag &lt;strong&gt;<br><br>
 
         Este é um texto em <i>itálico</i> usando a tag &lt;i&gt;<br>
