projeto guia rapido: adição httmll entities

--- a/primeiro projeto/projeto guia rapido html/projeto.html
+++ b/primeiro projeto/projeto guia rapido html/projeto.html
@@ -45,7 +45,7 @@
 
         Este é um texto com <u>sublinhado</u><br>
 
-        Este é um texto <strike>tachado</strike> - quando está errado, por exemplo.<br>
+        Este é um texto <strike>tachado</strike> usando a tag &lt;strike&gt; - quando está errado, por exemplo.<br>
 
         <hr>
 
