projetoFinalHtml >> index.html - Criação da página principal

--- a/primeiro projeto/aula20.html
+++ b/primeiro projeto/aula20.html
@@ -67,7 +67,7 @@
 		<input 
 		type="submit" 
 		name="enviarDsdosNovoUsuario"
-		value="Cadastrar"> <!--O atributo value é o texto que aparece no botão é o seu valor-->
+		value="Cadastrar"> <!--O atributo value é o texto que aparece no botão, é o seu valor-->
 	</form>
 
 </body>
