projeto Guia Rápido Html >> projeto.html - Adição de html entities

--- a/primeiro projeto/projeto guia rapido html/projeto.html
+++ b/primeiro projeto/projeto guia rapido html/projeto.html
@@ -37,21 +37,26 @@
 
         <h2>Tags</h2>
 
-        Este é um texto <b>negrito</b> usando a tag &lt;b&gt;<br>
-        Este é um texto <strong>negrito</strong> usando a tag &lt;strong&gt;<br><br>
+        <p>Este é um texto <b>negrito</b> usando a tag &lt;b&gt;<br>
+        Este é um texto <strong>negrito</strong> usando a tag &lt;strong&gt;</p><br><br>
 
-        Este é um texto em <i>itálico</i> usando a tag &lt;i&gt;<br>
-        Este é um texto em <em>itálico</em> usando a tag &lt;em&gt; - do inglês <em>enphasys</em><br>
+        <p>Este é um texto em <i>itálico</i> usando a tag &lt;i&gt;</p><br>
+        <p>Este é um texto em <em>itálico</em> usando a tag &lt;em&gt; - do inglês <em>enphasys</p></em><br>
 
-        Este é um texto com <u>sublinhado</u><br>
+        <p>Este é um texto com <u>sublinhado</u></p><br>
 
-        Este é um texto <strike>tachado</strike> usando a tag &lt;strike&gt; - quando está errado, por exemplo.<br>
+        <p>Este é um texto <strike>tachado</strike> usando a tag &lt;strike&gt; - quando está errado, por exemplo.</p><br> <!--Usando html entities para imprimir < e >, &lt; e &gt; respectivamente-->
+
+        <p>A tag <strong>&amp;nbsp;</strong> insere&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;espaço&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;entre 2 palavras ou componentes.<br>
+            Saiba mais sobre HTM Entitites em <a href="https://www.w3schools.com/html/html_entities.asp">aqui</a>.</p>
 
         <hr>
 
         <h2>Listas</h2>
 
         <h3>Listas não ordenadas (Não numeradas)</h3>
+
+        O atributo <strong>type</strong> pode ser <em>circle</em>, <em>disc</em> ou <em>square</em>.
 
         <ul type="disc"> <!--Atributo type sãoostipos de marcadores: circle, square ou disc-->
         	<li>Primeiro ítem</li>
@@ -62,6 +67,8 @@
         </ul> <!--ul, do inglês, unordered list,lista não ordenada-->
 
         <h3>Lista ordenada (numerada)</h3>
+
+        O atriburo <strong>type</strong> pode ser <em>1</em>, <em>a</em> ou <em>A</em> para ordem alfabética, <em>i</em> ou <em>I</em> para ordem em algarísmos romanos.
 
         <ol type="I"> <!--Atributo type sãoostipos de marcadores: 
         			1 - numérico, A - ALFABETO MAIÚSCULO,
