primeiroProjeto >> projeto guia rapido html >> projeto.html - Adição de assuntos Tabelas e Formulários

--- a/primeiro projeto/projeto guia rapido html/projeto.html
+++ b/primeiro projeto/projeto guia rapido html/projeto.html
@@ -83,6 +83,55 @@
 
         <hr>
 
+        <h2>Tabelas</h2>
+
+        <table border="2" width="50%">
+            <tr align="center">
+                <td>Esta é</td>
+                <td>Uma tabela</td>
+            </tr>
+        </table>
+
+        <hr>
+
+        <h2>Formulários</h2>
+
+        <form>
+            Escreva qualquer coisa <br>
+            <input type="texto" 
+            name="texto"
+            value=""
+            placeholder="qualquer coisa..."><br><br>
+
+            Coloque uma senha bem segura (12345) <br>
+            <input type="password" 
+            name="senha" 
+            placeholder="Senha bem segura"><br><br>
+
+
+            Escolha um ou outro: <br>
+            <input type="radio" name="escolha" value="este">Este&nbsp;
+            <input type="radio" name="escolha" value="este">Ou Este <br><br>
+
+            Selecione vários... <br>
+            <input type="checkbox" name="escolhacb" value="1">Escolha eu<br>
+            <input type="checkbox" name="escolhacb" value="1">Não! Escolha eu<br>
+            <input type="checkbox" name="escolhacb" value="1">Não, não! Escolha eu<br><br>
+
+            Selecione um... <br>
+            <select>
+                <option>Tem essa</option>
+                <option>Tem essa outra...</option>
+            </select><br><br>
+
+            Submeta tudo com isso! <br>
+            <input type="submit" name="botaosubmit" value="Submeter"><br><br>
+
+            Ou envie com isso! <br>
+            <input type="button" name="botaoenviar" value="Enviar"><br><br>
+
+        </form>
+
         <hr>
 
         <p>Este é só o rodapé da página, onde estão todas aquelas letras miúdas, os contatos, <br>
