--- a/projetoFinalHtml/index.html
+++ b/projetoFinalHtml/index.html
@@ -25,6 +25,7 @@
 
 			<tr>
 				<td colspan="2">
+					<h2>Sobre a universidade</h2>
 					<p>Lorem <strong>ipsum dolor</strong> sit <em>amet</em>, consectetur adipiscing elit. Integer a eros non metus luctus mollis. Nam viverra maximus iaculis. Maecenas a semper urna, at ornare urna. Suspendisse scelerisque erat purus, nec pharetra est consequat eget. Phasellus non justo eu nunc tincidunt elementum vitae et velit. Vestibulum porttitor eu est ut imperdiet. In tincidunt ac lectus id molestie. Proin et ullamcorper lorem.</p>
 
 					<p>Lorem <strong>ipsum dolor</strong> sit <em>amet</em>, consectetur adipiscing elit. Integer a eros non metus luctus mollis. Nam viverra maximus iaculis. Maecenas a semper urna, at ornare urna. Suspendisse scelerisque erat purus, nec pharetra est consequat eget. Phasellus non justo eu nunc tincidunt elementum vitae et velit. Vestibulum porttitor eu est ut imperdiet. In tincidunt ac lectus id molestie. Proin et ullamcorper lorem.</p>
