Utilização de bordas nos componentes html através do css (classes e id's)

--- a/projetoCSS3/projeto-div-span/index.html
+++ b/projetoCSS3/projeto-div-span/index.html
@@ -7,7 +7,7 @@
 		<style type="text/css">
 			
 			#cabecalho {
-				background: gray;
+				background: lightblue;
 				height: 150px;
 				padding: 20px;
 			}
@@ -24,7 +24,12 @@
 			}
 
 			.img-produto {
-				width: 200px;
+				width: 200px;	
+
+				border: 10px; /*também poderia ser: border: 5px solid black*/
+				border-style: double; /*border styles: dotted, dashed, solid, double, groove, ridge, inset, outset, none, hidden*/
+				border-color: blue darkgreen yellow red; /*é possível definir a cor em cada aresta da borda, no sentido horário, iniciando do topo*/
+				border-radius: 10px;
 			}
 
 			.menu {
