uso de famílias de fontes, fontes alternativas

--- a/projetoCSS3/projeto-div-span/index.html
+++ b/projetoCSS3/projeto-div-span/index.html
@@ -27,8 +27,8 @@
 				width: 200px;	
 
 				border: 10px; /*também poderia ser: border: 5px solid black*/
-				border-style: double; /*border styles: dotted, dashed, solid, double, groove, ridge, inset, outset, none, hidden*/
-				border-color: blue darkgreen yellow red; /*é possível definir a cor em cada aresta da borda, no sentido horário, iniciando do topo*/
+				border-style: groove; /*border styles: dotted, dashed, solid, double, groove, ridge, inset, outset, none, hidden*/
+				border-color: lightblue; /*é possível definir a cor em cada aresta da borda, no sentido horário, iniciando do topo*/
 				border-radius: 10px;
 			}
 
@@ -73,13 +73,13 @@
 		<span style="width: 100%;
 		align-items: center">
 			<a href="" class="produtos">
-				<img src="imagens/produto.png" class="img-produto">
+				<img src="imagens/produto.png" class="img-produto" alt="Produto 1">
 			</a>
 			<a href="" class="produtos">
-				<img src="imagens/produto.png" class="img-produto">
+				<img src="imagens/produto.png" class="img-produto" alt="Produto 2">
 			</a>
 			<a href="" class="produtos">
-				<img src="imagens/produto.png" class="img-produto">
+				<img src="imagens/produto.png" class="img-produto" alt="Produto 3">
 			</a>
 		</span>
 	</body>
