tamanho de fonte com a unidade em, uma proporcao do elemento pai

--- a/projetoCSS3/fonts-colors.html
+++ b/projetoCSS3/fonts-colors.html
@@ -13,17 +13,18 @@
 				height: fit-content;
 				margin: 20px;
 				padding: 20px;
+				font-size: 25px;
 			}
 
 			.formatacao-titulo {
 				color: white;
-				font-size: 50px;
+				font-size: 2em;
 				font-family: "Times New Roman", Times, serif;
 			}
 
 			.formatacao-texto {
 				color: white;
-				font-size: 40px;
+				font-size: 1.5em; /*A medida "em" indica a proporção do tamanho em relação ao elemento pai*/
 				font-family: Helvetica, Arial, sans-serif;
 			}
 		</style>
